trying to solve issue where when site is pushed live, on mobile the menu background is transparent, but in any phone simulators

--- a/application.css
+++ b/application.css
@@ -54,7 +54,7 @@ body{
 
 @media screen and (max-width:450px){
   .overlay{
-    background-color: rgba(0,0,0)!important;
+    background-color: rgba(0,0,0,1)!important;
 
   }
   .overlay a{
